feat(portal): AstraSystems dashboard + multi-tenant store
Add portal server (Discord OAuth + email/senha) and AstraSystems themed frontend.

Implement instances (API keys), per-instance products/stock, and Discord channel dropdown config.

Bot now sends staff logs, live sales notifications, and feedback requests using instance channel settings.

Add Windows run/stop scripts and ignore runtime artifacts.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,20 @@ ADMIN_PANEL_TOKEN=
 ADMIN_PANEL_PORT=3000
 ADMIN_PANEL_HOST=127.0.0.1
 
+# Portal SaaS (AstraSystems)
+# IMPORTANTE: sem PORTAL_SESSION_SECRET o portal nao inicia (seguranca).
+PORTAL_HOST=127.0.0.1
+PORTAL_PORT=3100
+PORTAL_BASE_URL=http://127.0.0.1:3100
+PORTAL_SESSION_SECRET=
+
+# Discord OAuth (mesmo app do bot)
+DISCORD_OAUTH_CLIENT_ID=
+DISCORD_OAUTH_CLIENT_SECRET=
+DISCORD_OAUTH_REDIRECT_URI=http://127.0.0.1:3100/auth/discord/callback
+
+# Mercado Pago
+MERCADOPAGO_ACCESS_TOKEN=
+# Opcional (se configurar, o webhook exige assinatura valida)
+MERCADOPAGO_WEBHOOK_SECRET=
+
