--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "site:dev": "cmd /c \"cd site && npm run dev\"",
+    "site:build": "cmd /c \"cd site && npm run build\"",
+    "site:start": "cmd /c \"cd site && npm run start\""
   },
   "dependencies": {
     "axios": "^1.6.8",
