Set product post mode to embed so product description stays inside embeds

--- a/config.json
+++ b/config.json
@@ -29,5 +29,5 @@
   "termsText": "Termos e Condições: pagamento via Pix, produto digital, entrega automática. Em caso de dúvidas, fale com a equipe.",
   "showAdminConfirmButton": false,
   "cartBottomImage": "",
-  "productPostMode": "content"
+  "productPostMode": "embed"
 }
