Implement per-instance bot runtime flow with Docker start/stop/restart and status monitoring

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,9 @@ MERCADOPAGO_ACCESS_TOKEN=
 # Opcional (se configurar, o webhook exige assinatura valida)
 MERCADOPAGO_WEBHOOK_SECRET=
 
+# Runtime por instancia (token do cliente em container dedicado)
+INSTANCE_DOCKER_ENABLED=true
+INSTANCE_BOT_IMAGE=botdc-bot:latest
+INSTANCE_MONITOR_INTERVAL_MS=30000
+INSTANCE_CRASH_THRESHOLD=3
+
