--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -3,6 +3,8 @@ FROM node:20-alpine
 WORKDIR /app
 ENV NODE_ENV=production
 
+RUN apk add --no-cache docker-cli
+
 COPY package*.json ./
 RUN npm ci --omit=dev && npm cache clean --force
 
