--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "docs:screenshots": "node scripts/capture-screenshots.mjs"
   },
   "dependencies": {
     "axios": "^1.6.8",
