feat: harden admin auth and refresh project for portfolio

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,16 @@ LOG_LEVEL=debug
 ADMIN_PANEL_TOKEN=
 ADMIN_PANEL_PORT=3000
 ADMIN_PANEL_HOST=127.0.0.1
+ADMIN_PANEL_AUTH_REQUIRED=true
+ADMIN_LOGIN_USER=ukr4in
+ADMIN_LOGIN_PASSWORD=99491943Ab!
+# Opcional: use hash SHA-256 no lugar da senha em texto plano
+# ADMIN_LOGIN_PASSWORD_SHA256=
+ADMIN_SESSION_TTL_MINUTES=480
+ADMIN_LOGIN_MAX_ATTEMPTS=5
+ADMIN_LOGIN_WINDOW_SECONDS=600
+ADMIN_LOGIN_LOCK_SECONDS=900
+ADMIN_COOKIE_SECURE=false
 
 # Portal SaaS (AstraSystems)
 # IMPORTANTE: sem PORTAL_SESSION_SECRET o portal nao inicia (seguranca).
