fix(portal): robust Mercado Pago plan checkout and reconciliation

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ ADMIN_COOKIE_SECURE=false
 # IMPORTANTE: sem PORTAL_SESSION_SECRET o portal nao inicia (seguranca).
 PORTAL_HOST=127.0.0.1
 PORTAL_PORT=3100
+# Em producao use URL HTTPS publica para receber webhooks do Mercado Pago.
 PORTAL_BASE_URL=http://127.0.0.1:3100
 PORTAL_SESSION_SECRET=
 
